# qq-response-enhancer

./: .gitignore
electron-reply-suggester/: README.md  config.json  index.html  package-lock.json  package.json
electron-reply-suggester/electron/: main.cjs  preload.cjs  suggestion-bubble.html
electron-reply-suggester/scripts/: launch-electron.cjs
electron-reply-suggester/src/: App.css  App.tsx  main.tsx  qqFaceMap.ts  types.ts  vite-env.d.ts
smart-reply/: .gitignore  README.md  config.toml  context.py  llm.py  main.py  models.py  pyproject.toml  requirements.txt  run.py  runtime_settings.json  settings.py
