[project]
name = "smart-reply"
version = "0.1.0"
description = "QQ smart reply suggester backend"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi==0.116.1",
  "httpx==0.28.1",
  "pydantic==2.11.7",
  "uvicorn[standard]==0.35.0",
  "websockets==15.0.1",
]

[tool.uv]
package = false
